@@ -21,10 +21,16 @@ my $tzil = Builder->from_config(
           prefix => 'dotty',
           include_dotfiles => 1,
         } ],
+        [ GatherDir => Selective => {
+          root   => '../corpus/extra',
+          prefix => 'some',
+          exclude => 'notme.txt',
+        } ],
         'Manifest',
       ),
       'source/.profile' => "Bogus dotfile.\n",
       'corpus/extra/.dotfile' => "Bogus dotfile.\n",
+      'corpus/extra/notme.txt' => "A file to exclude.\n",
     },
     also_copy => { 'corpus/extra' => 'corpus/extra' },
   },
@@ -37,8 +43,9 @@ my @files = map {; $_->name } @{ $tzil->files };
 is_filelist(
   [ @files ],
   [ qw(
-    bonus/subdir/index.html bonus/vader.txt
-    dotty/subdir/index.html dotty/vader.txt dotty/.dotfile
+    bonus/subdir/index.html bonus/vader.txt bonus/notme.txt
+    dotty/subdir/index.html dotty/vader.txt dotty/.dotfile dotty/notme.txt
+    some/subdir/index.html some/vader.txt
     dist.ini lib/DZT/Sample.pm t/basic.t
     MANIFEST
   ) ],
